--- a/weekend.html
+++ b/weekend.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>To Do List</title>
+    <title>Weekend</title>
 </head>
 <body>
-    <h1>Its a weekday!</h1>
-    <p>Why are you not working!</p>
     
 </body>
 </html>
